# disk-doctor

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
site/: deploy.sh  index.html  site.webmanifest  vercel.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: catalog.rs  clean.rs  commands.rs  disk.rs  history.rs  lib.rs  main.rs  memory.rs  scanner.rs
src/components/: Cleaning.tsx  DiskSummary.tsx  DiskView.tsx  Done.tsx  Header.tsx  Idle.tsx  MemoryView.tsx  Results.tsx  Tabs.tsx  TitleBar.tsx  Toolbar.tsx
src/lib/: api.ts  utils.ts
src/store/: index.ts
