[package]
name = "disk-doctor"
version = "0.1.0"
description = "CleanMyMac for the vibe coding era."
authors = ["Rik <rikkert.eth@gmail.com>"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "disk_doctor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
walkdir = "2"
dirs = "5"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
trash = "5"
anyhow = "1"
once_cell = "1"
rayon = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
